--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -17,7 +17,7 @@
             <input type="password" id="password" name="password" required>
         </div>
         
-        <button type="submit" class="btn primary">Login</button>
+        <button type="submit" class="update-button">Login</button>
     </form>
 </div>
 {% endblock %}
