--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <div class="container">
+        <div class="nav-links">
+            <a href="{{ url_for('home') }}">Home</a>
+            <a href="{{ url_for('login') }}">Admin</a>
+        </div>
+        
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
                 <div class="flash-messages">
